# gangwon-business-portal

./: .gitignore  LICENSE  main.py  pyproject.toml  render.yaml
.agent/: README.md
.agent/workflows/: bug-fix.md  code-refactor.md  feature-implementation.md
.claude/: README.md
.claude/skills/: README.md
.github/workflows/: ci-cd.yml
.kiro/specs/: exception.md  logging.md
.kiro/steering/: api-design-standard.md  code-standard.md  coding-standard.md  design-patterns.md  field-format-standard.md  module-layering-standard.md  skill-spec.md  skills-manager.md  software-design-principles.md
.windsurf/: README.md  config.json
.windsurf/workflows/: code-review.yml  deployment.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  requirements.txt
backend/alembic/: MIGRATION_HISTORY.md  env.py
backend/docs/: MIGRATION_PLAN.md  decorator_explanation.md  e2e_test_fix_plan.md
backend/scripts/: check_columns.py  check_log_chain_completeness.py  (+23 more)
docs/: (NICEDNB)API_251210.xlsx  ARCHITECTURE.md  BACKEND_LOGGING_GUIDE.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STEPS.md  FRONTEND_LOGGING_GUIDE.md  FRONTEND_LOGGING_REFACTOR_PLAN.md  GangwonUniv_Description_admin_Korean.md  GangwonUniv_Description_company_Korean.md  NEXT_STEPS.md  PRD.md  PROJECT_STATUS.md  README.md  UPGRADE.md  UPGRADE_EXECUTION_PLAN.md  frontend_member_modules.md  glossary.md
frontend/: .env.example  .gitignore  README.md  index.html  package.json  playwright.config.js  tailwind.config.js  vite.config.js  vitest.config.js
scripts/: generate_banners.py
(+889 files in other folders)
